Обновление Swagger документации: контакт изменён на разработчика
